--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -25,8 +25,18 @@
   <link rel="stylesheet"
         href="css/full-site-css/large.css">
 
+  <link rel="stylesheet"
+        href="css/index-css/small.css">
+  <link rel="stylesheet"
+        href="css/index-css/medium.css">
+  <link rel="stylesheet"
+        href="css/index-css/large.css">
+
   <script defer
           src="js/full-site-js/script.js"></script>
+
+  <script defer
+          src="js/index-js/index.js"></script>
 
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
@@ -138,14 +148,6 @@
     </div>
 
   </footer>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: ['Montserrat', 'Yaldevi']
-      }
-    });
-  </script> -->
 </body>
 
 </html>
